--- a/src/style.css
+++ b/src/style.css
@@ -69,6 +69,14 @@ main{
 
 .hidden{
     visibility: hidden;
+    opacity: 0;
+    transition: visibility 0s linear 300ms, opacity 300ms;
+}
+
+.visible{
+    visibility: visible;
+    opacity: 1;
+    transition: visibility 0s linear 0s, opacity 300ms;
 }
 
 
